@@ -427,6 +427,7 @@ GST_ELEMENT_CLOCK
 GST_ELEMENT_PADS
 GST_ELEMENT_ERROR
 GST_ELEMENT_WARNING
+GST_ELEMENT_INFO
 GST_ELEMENT_IS_LOCKED_STATE
 
 <SUBSECTION element-construction>
