@@ -1,5 +1,12 @@
 2007-02-21  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* docs/gst/gstreamer-sections.txt:
+	* gst/gstelement.h:
+	  Fix up documentation to link to the correct GstGError section.
+	  Add GST_ELEMENT_INFO macro since someone else added a Info message.
+
+2007-02-21  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* tools/gst-launch.c: (event_loop):
 	  Make sure that we actually show the important message part of a
 	  warning message.
